--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,14 +2,20 @@
     <section class="section about" id="about">
         <div id="about-text">
             <div class="section-heading">About</div>
+             <p class="paragraph-text justify-text">
+                Welcome to my wonderland!✨ 
+            </p>
             <p class="paragraph-text justify-text">
                 I'm a statistical analyst who recently graduated with a Master's degree in Statistics. 
             </p>
             <p class="paragraph-text justify-text">
                 I'm seeking a full-time job starting immediately as a Data Scientist / Data Analyst / Statistician / Statistical Programmer.
             </p>
+             <p class="paragraph-text justify-text">
+                I'm also a puzzle🧩 lover, piano🎹 and guitar🎸 beginner！
+            </p>
             <p class="paragraph-text justify-text">
-                I maintain a little blog at <a href="{{ site.blog_url }}">nagekar.com</a> where I write about my recent interests and other activities. I post my software projects on <a href="https://github.com/{{ site.github_username }}">GitHub</a>. My email address can be found at the <span class="extra-link"><a href="#extra">bottom</a></span> of this page.
+                I post my software projects on <a href="https://github.com/{{ site.github_username }}">GitHub</a>. My email address can be found at the <span class="extra-link"><a href="#extra">bottom</a></span> of this page.
             </p>
         </div>
     </section>
