--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,10 @@
             </p>
             <p class="paragraph-text justify-text">
                 I'm a statistical analyst who recently graduated with a Master's degree in Statistics. 
-                I'm seeking a full-time job starting immediately as a Data Scientist / Data Analyst / Statistician / Statistical Programmer.
+            </p>
+                I'm seeking a full-time job starting immediately as 
+            </p>
+                Data Scientist / Data Analyst / Statistician / Statistical Programmer.
             </p>
              <p class="paragraph-text justify-text">
                 I'm also a puzzle🧩 lover, piano🎹 and guitar🎸 beginner！
