--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,11 +10,10 @@
             </p>
             <p class="paragraph-text justify-text">
                 I'm seeking a full-time job starting immediately as 
-            </p>
-                **Data Scientist / Data Analyst / Statistician / Statistical Programmer.**
+                Data Scientist / Data Analyst / Statistician / Statistical Programmer.
             </p>
              <p class="paragraph-text justify-text">
-                I'm also a **🧩puzzle lover, 🎹piano and 🎸guitar beginner！**
+                I'm also a 🧩puzzle lover, 🎹piano and 🎸guitar beginner！
             </p>
             <p class="paragraph-text justify-text">
                 I post my software projects on <a href="https://github.com/{{ site.github_username }}">GitHub</a>. My email address can be found at the <span class="extra-link"><a href="#extra">bottom</a></span> of this page. Please feel free to contact me!
