--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
     {% include projects.html %}
 
-    {% include experiences.html %}
+    {% include blogs.html %}
         
     {% include extra.html %}
 
