--- a/_includes/extra.html
+++ b/_includes/extra.html
@@ -8,7 +8,7 @@
             <p class="paragraph-text justify-text">
                 Please feel free to write to me for anything: <a href="mailto:{{ site.email }}">{{ site.email }}</a>. 
             <p class="paragraph-text justify-text">
-                My resume is available here: <a href="{{ site.resume }}/resume/Resume_Jiafeng Li.pdf">PDF</a>
+                My resume is available here: <a href="{{ site.resume }}/assets/images/Resume_Jiafeng Li.pdf">PDF</a>
             <div class="extra-links">
                 <span class="hint--bottom bottom-link" aria-label="Email">
                     <a href="mailto:{{ site.email }}"><i class="head-icon fas fa-envelope"></i></a>
