--- a/_includes/extra.html
+++ b/_includes/extra.html
@@ -3,10 +3,10 @@
         <div>
             <div class="section-heading" id="chat-text">Contact</div>
             <p class="paragraph-text justify-text">
-                I'd love to hear from you! I'm open to collaborations, especially on open source projects. Interesting work opportunity? Shoot. Just want to have a coffee and talk about stars, cars or Pokémon? Awesome. 
+                I'd love to hear from you! I'm open to collaborations, especially on job opportunities and open-source projects. Just want to talk about music 🎵 or food 🍔? Welcome! 
             </p>
             <p class="paragraph-text justify-text">
-                Please feel free to write to me for anything: <a href="mailto:{{ site.email }}">{{ site.email }}</a>. 
+                Please feel free to contact me via email: <a href="mailto:{{ site.email }}">{{ site.email }}</a>. 
             <p class="paragraph-text justify-text">
                 My resume is available here: <a href="{{ site.resume }}/assets/images/Resume_Jiafeng Li.pdf">PDF</a>
             <div class="extra-links">
