--- a/_includes/extra.html
+++ b/_includes/extra.html
@@ -3,12 +3,18 @@
         <div>
             <div class="section-heading" id="chat-text">Contact</div>
             <p class="paragraph-text justify-text">
-                I'd love to hear from you! I'm open to collaborations, especially on job opportunities and open-source projects. Just want to talk about music 🎵 or food 🍔? Welcome! 
+                I'd love to hear from you! I'm open to discussions, especially for job opportunities and open-source projects. 
             </p>
+            <p class="paragraph-text justify-text">
+                Just want to talk about music 🎵 or food 🍔? Welcome! 
+            </p> 
+                
             <p class="paragraph-text justify-text">
                 Please feel free to contact me via email: <a href="mailto:{{ site.email }}">{{ site.email }}</a>. 
             <p class="paragraph-text justify-text">
-                My resume is available here: <a href="{{ site.resume }}/assets/images/Resume_Jiafeng Li.pdf">PDF</a>
+                My resume is available here: <a href="assets/images/Resume_Jiafeng Li.pdf">PDF</a>
+           </p>
+ 
             <div class="extra-links">
                 <span class="hint--bottom bottom-link" aria-label="Email">
                     <a href="mailto:{{ site.email }}"><i class="head-icon fas fa-envelope"></i></a>
