--- a/_includes/extra.html
+++ b/_includes/extra.html
@@ -3,7 +3,10 @@
         <div>
             <div class="section-heading" id="chat-text">Contact</div>
             <p class="paragraph-text justify-text">
-                I'd love to hear from you! I'm open to discussions, especially for job opportunities and open-source projects. 
+                I'd love to hear from you! 
+             </p>    
+            <p class="paragraph-text justify-text">   
+                I'm open to discussions, especially for job opportunities and open-source projects. 
             </p>
             <p class="paragraph-text justify-text">
                 Just want to talk about music 🎵 or food 🍔? Welcome! 
