--- a/_includes/extra.html
+++ b/_includes/extra.html
@@ -15,7 +15,7 @@
             <p class="paragraph-text justify-text">
                 Please feel free to contact me via email: <a href="mailto:{{ site.email }}">{{ site.email }}</a>. 
             <p class="paragraph-text justify-text">
-                My resume is available here: <a href="assets/images/Resume_Jiafeng Li.pdf">PDF</a>
+                Or Connect me! 👇
            </p>
  
             <div class="extra-links">
@@ -28,10 +28,10 @@
                 <span class="hint--bottom bottom-link" aria-label="LinkedIn">
                     <a href="https://www.linkedin.com/in/jiafeng-li-a70635200/{{ site.LinkedIn }}"><i class="head-icon fab fa-linkedin"></i></a>
                 </span>
-                <!-- <span class="hint--bottom bottom-link" aria-label="Reddit">
-                    <a href="https://www.reddit.com/u/{{ site.reddit_username }}"><i class="head-icon fab fa-reddit"></i></a>
+                <span class="hint--bottom bottom-link" aria-label="Instagram">
+                    <a href="https://www.instagram.com/janice_li315/{{ site.Instagram }}"><i class="head-icon fab fa-Instagram"></i></a>
                 </span>
-                <span class="hint--bottom bottom-link" aria-label="Twitter">
+              <!--   <span class="hint--bottom bottom-link" aria-label="Twitter">
                     <a href="https://twitter.com/{{ site.twitter_username }}"><i class="head-icon fab fa-twitter"></i></a>
                 </span> -->
             </div>
