--- a/_includes/extra.html
+++ b/_includes/extra.html
@@ -15,7 +15,7 @@
             <p class="paragraph-text justify-text">
                 Please feel free to contact me via email: <a href="mailto:{{ site.email }}">{{ site.email }}</a>. 
             <p class="paragraph-text justify-text">
-                Or Connect me! 👇
+                Or connect me! 👇
            </p>
  
             <div class="extra-links">
@@ -28,8 +28,8 @@
                 <span class="hint--bottom bottom-link" aria-label="LinkedIn">
                     <a href="https://www.linkedin.com/in/jiafeng-li-a70635200/{{ site.LinkedIn }}"><i class="head-icon fab fa-linkedin"></i></a>
                 </span>
-                <span class="hint--bottom bottom-link" aria-label="Instagram">
-                    <a href="https://www.instagram.com/janice_li315/{{ site.Instagram }}"><i class="head-icon fab fa-Instagram"></i></a>
+              <span class="hint--bottom bottom-link" aria-label="Instagram">
+                    <a href="https://www.instagram.com/janice_li315/"><i class="head-icon fab fa-instagram"></i></a>
                 </span>
               <!--   <span class="hint--bottom bottom-link" aria-label="Twitter">
                     <a href="https://twitter.com/{{ site.twitter_username }}"><i class="head-icon fab fa-twitter"></i></a>
