--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,7 +16,7 @@
                 I'm also a puzzle lover, coffee explorer, and piano & guitar beginner！🧩 ☕️ 🎹 🎸
             </p>
             <p class="paragraph-text justify-text">
-                I post my software projects on <a href="https://github.com/{{ site.github_username }}">GitHub</a>. My email address can be found at the <span class="extra-link"><a href="#extra">bottom</a></span> of this page. 
+                My contact information can be found at the <span class="extra-link"><a href="#extra">bottom</a></span> of this page. 
             </p>
         </div>
     </section>
