--- a/_includes/extra.html
+++ b/_includes/extra.html
@@ -15,6 +15,11 @@
             <p class="paragraph-text justify-text">
                 Please feel free to contact me via email: <a href="mailto:{{ site.email }}">{{ site.email }}</a>. 
             <p class="paragraph-text justify-text">
+
+            <p class="paragraph-text justify-text">
+                 My resume is available here: <a href="assets/images/Resume_Jiafeng Li.pdf">PDF</a>
+            </p>
+
                 Or connect me! 👇
            </p>
  
