--- a/_includes/extra.html
+++ b/_includes/extra.html
@@ -19,7 +19,7 @@
             <p class="paragraph-text justify-text">
                  My resume is available here: <a href="assets/images/Resume_Jiafeng Li.pdf">PDF</a>
             </p>
-
+            <p class="paragraph-text justify-text">
                 Or connect me! 👇
            </p>
  
