--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -8,7 +8,7 @@
                 <div class="what-i-do">
                     <h3 class="center-align skills-subsection">Summary</h3>
                     <p class="paragraph-text center-align">
-                        I'm a statistical analyst with over five years of programming experience in R, Python, SAS, and SQL. Driven to leverage data for solving real-world challenges through statistical modeling and analysis!
+                        I have over five years of programming experience in R, Python, SAS, and SQL. Driven to leverage data for solving real-world challenges through statistical modeling and analysis!
                     </p>
                 </div>
                 <div class="technical-skills">
