--- a/_includes/blogs.html
+++ b/_includes/blogs.html
@@ -1,7 +1,7 @@
 <div class="section-wrapper">
     <section class="section" id="blog-posts">
         <div class="full-width">
-            <div class="section-heading" id="recent-posts-text">Blog</div>
+            <div class="section-heading" id="recent-posts-text">Experiences</div>
             <div class="blogs-wrapper" id="rss-feeds"></div>
         </div>
     </section>
