--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
         <div id="about-text">
             <div class="section-heading">About</div>
              <p class="paragraph-text justify-text">
-                Welcome to my wonderland!✨ 
+                Hi there, welcome to my wonderland!✨ 
             </p>
             <p class="paragraph-text justify-text">
                 I'm a statistical analyst who recently graduated with a Master's degree in Statistics. 
