--- a/_includes/Teaching Assistant.html
+++ b/_includes/Teaching Assistant.html
@@ -4,7 +4,7 @@
             <div class="section-heading">Work Experience</div>
             <div class="experience-item">
                 <div class="experience-image">
-                    <img src="ta.jpg" alt="Work Experience Image">
+                    <img src="assets/images/ta.jpg" alt="Work Experience Image">
                 </div>
                 <div class="experience-details">
                     <h3>Job Title</h3>
