--- a/_includes/Teaching Assistant.html
+++ b/_includes/Teaching Assistant.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <div class="section-wrapper">
     <section class="section experience" id="experience">
         <div id="experience-text">
@@ -20,3 +22,4 @@
         </div>
     </section>
 </div>
+<html>
